# phoenix

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: RcppExports.R  age_check.R  check_data.R  data-quality-checks.R  data-sets.R  map.R  phoenix-package.R  phoenix.R  phoenix8.R  phoenix_cardiovascular.R  phoenix_coagulation.R  phoenix_endocrine.R  phoenix_hepatic.R  phoenix_immunologic.R  phoenix_neurologic.R  phoenix_renal.R  phoenix_respiratory.R  utilities.R  zzz.R
articles/: ehr_implementation_notes.html  ehr_implementation_notes.md  index.html  index.md  mobile_app.html  mobile_app.md  phoenix.html  phoenix.md  python.html  python.md  sql.html  sql.md
data/: sepsis.rda
data-raw/: Makefile  sepsis.R
examples/: check_data.R
inst/: CITATION  WORDLIST  benchmarking.R  phoenix_data_report.Rmd  phoenix_rubric.md  phoenix_rubric_caption.md  phoenix_rubric_footnotes.md  phoenix_rubric_sans_footnotes.md
man/: age_check.Rd  check_data.Rd  data_checks.Rd  map.Rd  phoenix-package.Rd  phoenix.Rd  phoenix8.Rd  phoenix_cardiovascular.Rd  phoenix_coagulation.Rd  phoenix_endocrine.Rd  phoenix_hepatic.Rd  phoenix_immunolgic.Rd  phoenix_immunologic.Rd  phoenix_input_data_checks.Rd  phoenix_neurologic.Rd  phoenix_renal.Rd  phoenix_respiratory.Rd  phoenix_sepsis_neurologic.Rd  sepsis.Rd
news/: index.html  index.md
python/: LICENSE  MANIFEST.in  Makefile  README.Rmd  README.md  environment.yml  phoenix_sepsis_example.py  pyproject.toml  sepsis.csv
python/phoenix/: __init__.py  phoenix.py
reference/: index.html  index.md  map.html  map.md  phoenix-package.html  phoenix-package.md  phoenix.html  phoenix.md  phoenix8.html  phoenix8.md  phoenix_cardiovascular.html  phoenix_cardiovascular.md  phoenix_coagulation.html  phoenix_coagulation.md  phoenix_endocrine.html  phoenix_endocrine.md  phoenix_hepatic.html  phoenix_hepatic.md  phoenix_immunologic.html  phoenix_immunologic.md  sepsis.html  (+8 more)
(+42 files in other folders)
