[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix"
version = "1.0.0"
authors = [
  {name = "Peter E. DeWitt", email = "peter.dewitt@cuanschutz.edu"},
  {name = "Seth Russell", email = "seth.russell@cuanschutz.edu"},
  {name = "Meg Rebull", email = "meg.rebull@cuanschutz.edu"},
  {name = "Tell Bennett", email = "tell.bennett@cuanschutz.edu"},
  {name = "L. Nelson Sanchez-Pinto", email = "lsanchezpinto@luriechildrens.org"}
]
description = "Implementation of the Phoenix and Phoenix-8 Sepsis Criteria as described in 'Development and Validation of the Phoenix Criteria for Pediatric Sepsis and Septic Shock' by Sanchez-Pinto, Bennett, DeWitt, Russell et al. (2024) <doi:10.1001/jama.2024.0196> (Drs. Sanchez-Pinto and Bennett contributed equally to this manuscript; Dr. DeWitt and Mr. Russell contributed equally to the manuscript) and 'International Consensus Criteria for Pediatric Sepsis and Septic Shock' by Schlapbach, Watson, Sorce, Argent, et al. (2024) <doi:10.1001/jama.2024.0179> (Drs Schlapbach, Watson, Sorce, and Argent contributed equally)."
dependencies = [
  "numpy",
  "pandas"
]
