[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
phoenix = ["*.csv"]

[project]
name = "phoenix"
version = "1.0.0-9001"
authors = [
  {name = "Peter E. DeWitt", email = "peter.dewitt@cuanschutz.edu"},
  {name = "Seth Russell", email = "seth.russell@cuanschutz.edu"},
  {name = "Meg Rebull", email = "meg.rebull@cuanschutz.edu"},
  {name = "Tell Bennett", email = "tell.bennett@cuanschutz.edu"},
  {name = "L. Nelson Sanchez-Pinto", email = "lsanchezpinto@luriechildrens.org"}
]
description = "Implementation of the Phoenix and Phoenix-8 Pediatric Sepsis Criteria"
dependencies = [
  "numpy",
  "pandas"
]
readme = "README.md"

[project.urls]
Homepage = "https://cu-dbmi-peds.github.io/phoenix/index.html"
Issues = "https://github.com/CU-DBMI-Peds/phoenix/issues"

